WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269787
[WGSL] Global sorting tries to print the name of a const_assert
https://bugs.webkit.org/show_bug.cgi?id=269787
Summary
[WGSL] Global sorting tries to print the name of a const_assert
Tadeu Zagallo
Reported
2024-02-20 06:26:42 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-02-20 06:30:57 PST
<
rdar://problem/123238821
>
Tadeu Zagallo
Comment 2
2024-02-20 06:36:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24813
EWS
Comment 3
2024-02-21 08:03:05 PST
Committed
275097@main
(9d9b9bba0c3d): <
https://commits.webkit.org/275097@main
> Reviewed commits have been landed. Closing PR #24813 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug