Source/WebGPU/WGSL/GlobalSorting.cpp
@@ -42,6 +42,11 @@ namespace WGSL {
 
 constexpr bool shouldLogGlobalSorting = false;
 
+inline String nameForDeclaration(AST::Declaration& declaration)
+{
+    return is<AST::ConstAssert>(declaration) ? "const_assert"_s : declaration.name().id();
+}
+
 class Graph {
 public:
     class Edge;
@@ -152,10 +157,8 @@ public:
     EdgeSet& edges() { return m_edges; }
     void addEdge(Node& source, Node& target)
     {
-        if constexpr (shouldLogGlobalSorting) {
-            String sourceNodeName = is<AST::ConstAssert>(source.astNode()) ? "const_assert"_s : source.astNode().name().id();
-            dataLogLnIf(shouldLogGlobalSorting, "addEdge: source: ", sourceNodeName, ", target: ", target.astNode().name());
-        }
+        if constexpr (shouldLogGlobalSorting)
+            dataLogLn("addEdge: source: ", nameForDeclaration(source.astNode()), ", target: ", target.astNode().name());
         auto result = m_edges.add(Edge(source, target));
         Edge& edge = *result.iterator;
         source.outgoingEdges().add(edge);
@@ -282,10 +285,8 @@ static std::optional<FailedCheck> reorder(AST::Declaration::List& list)
 
     std::function<void(Graph::Node&, unsigned)> processNode;
     processNode = [&](Graph::Node& node, unsigned currentIndex) {
-        if constexpr (shouldLogGlobalSorting) {
-            String nodeName = is<AST::ConstAssert>(node.astNode()) ? "const_assert"_s : node.astNode().name().id();
-            dataLogLn("Process: ", nodeName);
-        }
+        if constexpr (shouldLogGlobalSorting)
+            dataLogLn("Process: ", nameForDeclaration(node.astNode()));
         list.append(node.astNode());
         for (auto edge : node.incomingEdges()) {
             auto& source = edge.source();
@@ -317,7 +318,8 @@ static std::optional<FailedCheck> reorder(AST::Declaration::List& list)
     auto* node = cycleNode;
     HashSet<Graph::Node*> visited;
     while (true) {
-        dataLogLnIf(shouldLogGlobalSorting, "cycle node: ", node->astNode().name());
+        if constexpr (shouldLogGlobalSorting)
+            dataLogLn("cycle node: ", nameForDeclaration(node->astNode()));
         ASSERT(!node->outgoingEdges().isEmpty());
         visited.add(node);
         node = &node->outgoingEdges().first().target();
